--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="information.html">Information</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -98,73 +99,70 @@
             <br><br>
         </p>
     </div>
-
-
+    
     <!--===Footer Section Start===-->
     <footer class="footer">
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h2>Our Specialties</h2>
-                    <ul>
-                        <li><a href="#"> We sell Fresh stones only (unused).</a></li>
-                        <hr>
-                        <li><a href="#"> We send goods with 100% insurance.</a></li>
-                        <hr>
-                        <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
-                        <hr>
-                        <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
-                        <hr>
-                        <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
-                                goods at your home.</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Blue Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Ruby</a></li>
-                        <hr>
-                        <li><a href="#">Yellow Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Pink Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">White Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Padparadscha</a></li>
-                        <hr>
-                        <li><a href="#">Star Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Purple Sapphire</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Semi Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Garnet</a></li>
-                        <hr>
-                        <li><a href="#">Tourmaline</a></li>
-                        <hr>
-                        <li><a href="#">Chrysoberyl</a></li>
-                        <hr>
-                        <li><a href="#">Aqamarine</a></li>
-                        <hr>
-                        <li><a href="#">Topaz</a></li>
-                        <hr>
-                        <li><a href="#">Spinel</a></li>
-                        <hr>
-                        <li><a href="#">Amethyst</a></li>
-                        <hr>
-                        <li><a href="#">Moonstone</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <div class="gia-img">
-                        <img src="/Web_Application_Final-_Project_Group-R/Images/cc1.png" alt="">
-                        <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
-                            www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
-                    </div>
+            <div class="footer-col">
+                <h2>Our Specialties</h2>
+                <ul>
+                    <li><a href="#"> We sell Fresh stones only (unused).</a></li>
+                    <hr>
+                    <li><a href="#"> We send goods with 100% insurance.</a></li>
+                    <hr>
+                    <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
+                    <hr>
+                    <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
+                    <hr>
+                    <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
+                            goods at your home.</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Blue Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Ruby</a></li>
+                    <hr>
+                    <li><a href="#">Yellow Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Pink Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">White Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Padparadscha</a></li>
+                    <hr>
+                    <li><a href="#">Star Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Purple Sapphire</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Semi Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Garnet</a></li>
+                    <hr>
+                    <li><a href="#">Tourmaline</a></li>
+                    <hr>
+                    <li><a href="#">Chrysoberyl</a></li>
+                    <hr>
+                    <li><a href="#">Aqamarine</a></li>
+                    <hr>
+                    <li><a href="#">Topaz</a></li>
+                    <hr>
+                    <li><a href="#">Spinel</a></li>
+                    <hr>
+                    <li><a href="#">Amethyst</a></li>
+                    <hr>
+                    <li><a href="#">Moonstone</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <div class="gia-img">
+                    <img src="/Images/cc1.png" alt="">
+                    <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
+                        www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
                 </div>
             </div>
         </div>
@@ -174,5 +172,4 @@
         <p>Copyright 2024 &copy; ROYAL GEMSTONE PARADICE (PVT) LTD</p>
     </div>
 </body>
-
 </html>
