--- a/blue-sapphire.html
+++ b/blue-sapphire.html
@@ -9,6 +9,7 @@
 
     <!-- ==== CSS File Links ====-->
     <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css\collection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,11 +53,35 @@
     </header>
     <!--===Header Section Close===-->
 
+    <div class="shop-container">
+        <div class="gem-title">
+            <h1>Blue Sapphire</h1><br>
+            <p>Blue Sapphire Gemstones
+                Indulge in the Exquisite Collection of Blue Sapphire Gemstones. These sapphires typically showcase a
+                captivating range of blue hues, from light and cornflower blue to deeper royal blues. These gemstones
+                are known for their exceptional hardness, making them durable and suitable for various jewelry
+                settings.<br><br>
+                Ceylon blue sapphires are highly valued for their rarity and are considered some of the finest examples
+                in the world. Beyond their aesthetic appeal, these sapphires hold cultural significance and are
+                associated with qualities like wisdom, nobility, and divine favor. Whether set in engagement rings,
+                earrings, or other jewelry pieces, Ceylon blue sapphires are cherished for their timeless elegance and
+                enduring allure.</p>
+        </div>
+    </div>
+    <div class="gem-contain">
+        <div class="filter">
+            <div class="color-filt">
+                <button id="colorDropdown" class="color-drop">Color</button>
+                <div id="myDropdown" class="dropdown-content">
 
+            </div>
+        </div>
+        
+        <div class="shop-item">
 
+        </div>
+    </div>
 
-
-    
 
     <!--===Footer Section Start===-->
     <footer class="footer">
