--- a/events.html
+++ b/events.html
@@ -9,6 +9,7 @@
 
     <!-- ==== CSS File Links ====-->
     <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css\subpages.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -35,6 +36,7 @@
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="information.html">Information</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -51,77 +53,124 @@
     </header>
     <!--===Header Section Close===-->
 
+    <!-- Event Page  -->
+    <div class="event-container">
+        <div class="event-title">
+            <h1>Events & News</h1><br>
+        </div>
+
+        <div class="event-post post1">
+            <h3>Facets 2023: A Global Invitation to the Most Fabulous Gem Show in Sri Lanka</h3>
+            <h4>by Kavidu Hasaranga &nbsp; June 28,2024</h4>
+            <br>
+            <div class="event-img img1">
+                <img src="Images/event_post1.jpg">
+            </div>
+            <br>
+            <p>In the heart of the Indian Ocean, where the allure of gemstones meets the enchanting landscapes of Sri Lanka, the stage is set for the ...</p>
+            <br>
+            <span>Posted in <a href="#">Blue sapphire</a>, <a href="#">Events</a>, <a href="#">Gem Exhibition</a>, <a href="#">gemstone</a>, <a href="#">sustainability</a></span>
+            <br><br>
+            <a href="#"><button class="read-more">Read More</button></a>
+        </div>
+        <br>
+        <div class="event-post post2">
+            <h3>Hong Kong jewelry & Gem Fair 2023 18th-22nd September Booth Number AWE 2N09</h3>
+            <h4>by Sangeeth Thisaranga &nbsp; June 07,2024</h4>
+            <br>
+            <div class="event-img img2">
+                <img src="Images/event_post2.jpg">
+            </div>
+            <br>
+            <p>World’s Number One Fine Jewellery Event Returns In 2023!Jewellery & Gem WORLD Hong Kong (JGW), popularly known as the September Hong Kong Jewel...</p>
+            <br>
+            <span>Posted in <a href="#">Blue sapphire</a>, <a href="#">Events</a>, <a href="#">Gem Exhibition</a>, <a href="#">gemstone</a>, <a href="#">sustainability</a></span>
+            <br><br>
+            <a href="#"><button class="read-more">Read More</button></a>
+        </div>
+        <div class="event-post post3">
+            <h3>68th Bangkok Gems & Jewelry Fair 2023-BOOTH NUMBER T34</h3>
+            <h4>by Randeesh Weerasinghe &nbsp; April 15,2024</h4>
+            <br>
+            <div class="event-img img3">
+                <img src="Images/event_post3.jpg">
+            </div>
+            <br>
+            <p>Bangkok Gems & Jewelry Fair (BGJF) is one of the world’s most renowned and longest-celebrated gems and jewelry trade fair in the industry. Orga...</p>
+            <br>
+            <span>Posted in <a href="#">Blue sapphire</a>, <a href="#">Events</a>, <a href="#">Gem Exhibition</a>, <a href="#">gemstone</a>, <a href="#">sustainability</a></span>
+            <br><br>
+            <a href="#"><button class="read-more">Read More</button></a>
+        </div>
+    </div>
 
 
 
 
-    
 
     <!--===Footer Section Start===-->
     <footer class="footer">
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h2>Our Specialties</h2>
-                    <ul>
-                        <li><a href="#"> We sell Fresh stones only (unused).</a></li>
-                        <hr>
-                        <li><a href="#"> We send goods with 100% insurance.</a></li>
-                        <hr>
-                        <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
-                        <hr>
-                        <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
-                        <hr>
-                        <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
-                                goods at your home.</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Blue Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Ruby</a></li>
-                        <hr>
-                        <li><a href="#">Yellow Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Pink Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">White Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Padparadscha</a></li>
-                        <hr>
-                        <li><a href="#">Star Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Purple Sapphire</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Semi Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Garnet</a></li>
-                        <hr>
-                        <li><a href="#">Tourmaline</a></li>
-                        <hr>
-                        <li><a href="#">Chrysoberyl</a></li>
-                        <hr>
-                        <li><a href="#">Aqamarine</a></li>
-                        <hr>
-                        <li><a href="#">Topaz</a></li>
-                        <hr>
-                        <li><a href="#">Spinel</a></li>
-                        <hr>
-                        <li><a href="#">Amethyst</a></li>
-                        <hr>
-                        <li><a href="#">Moonstone</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <div class="gia-img">
-                        <img src="/Images/cc1.png" alt="">
-                        <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
-                            www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
-                    </div>
+            <div class="footer-col">
+                <h2>Our Specialties</h2>
+                <ul>
+                    <li><a href="#"> We sell Fresh stones only (unused).</a></li>
+                    <hr>
+                    <li><a href="#"> We send goods with 100% insurance.</a></li>
+                    <hr>
+                    <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
+                    <hr>
+                    <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
+                    <hr>
+                    <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
+                            goods at your home.</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Blue Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Ruby</a></li>
+                    <hr>
+                    <li><a href="#">Yellow Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Pink Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">White Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Padparadscha</a></li>
+                    <hr>
+                    <li><a href="#">Star Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Purple Sapphire</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Semi Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Garnet</a></li>
+                    <hr>
+                    <li><a href="#">Tourmaline</a></li>
+                    <hr>
+                    <li><a href="#">Chrysoberyl</a></li>
+                    <hr>
+                    <li><a href="#">Aqamarine</a></li>
+                    <hr>
+                    <li><a href="#">Topaz</a></li>
+                    <hr>
+                    <li><a href="#">Spinel</a></li>
+                    <hr>
+                    <li><a href="#">Amethyst</a></li>
+                    <hr>
+                    <li><a href="#">Moonstone</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <div class="gia-img">
+                    <img src="/Images/cc1.png" alt="">
+                    <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
+                        www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
                 </div>
             </div>
         </div>
