--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="events.html">Events</a></li>
+                    <li><a href="information.html">Information</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -94,49 +95,65 @@
             <div class="gemstone-item">
                 <a href="#"><img src="Images/BLUE SAPPHIRE-2.jpg" alt="Blue Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>BLUE SAPPHIRE</h3></a>
+                <a href="#">
+                    <h3>BLUE SAPPHIRE</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/ruby-3.jpg" alt="Ruby"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>RUBY</h3></a>
+                <a href="#">
+                    <h3>RUBY</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/YELLOW SAPPHIRE-1.jpg" alt="Yellow Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>YELLOW SAPPHIRE</h3></a>
+                <a href="#">
+                    <h3>YELLOW SAPPHIRE</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/PINK SAPPHIRE-3.jpg" alt="Pink Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>PINK SAPPHIRE</h3></a>
+                <a href="#">
+                    <h3>PINK SAPPHIRE</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/WHITE SAPPHIRE-2.jpg" alt="White Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>WHITE SAPPHIRE</h3></a>
+                <a href="#">
+                    <h3>WHITE SAPPHIRE</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/PADPARADSCHA-1.jpg" alt="PADPARADSCHA"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>PADPARADSCHA</h3></a>
+                <a href="#">
+                    <h3>PADPARADSCHA</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/STAR SAPPHIRE.jpg" alt="Blue Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>Star Sapphire</h3></a>
+                <a href="#">
+                    <h3>Star Sapphire</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <a href="#"><img src="Images/Purple Sapphire-1.jpg" alt="Blue Sapphire"></a>
                 <h5><a href="#">Precious Gemstones</a></h5>
-                <a href="#"><h3>Purple Sapphire</h3></a>
+                <a href="#">
+                    <h3>Purple Sapphire</h3>
+                </a>
             </div>
         </div>
     </section>
@@ -197,133 +214,219 @@
     <!--Home 5th Section-->
     <section class="section3">
         <h3>BUY SEMI PRECIOUS GEMSTONE ONLINE</h3>
-        <p>Buy Beautiful semi-precious stones Aquamarine, Garnet, Tourmaline, Chrysoberyl, Spinel, Topaz, Moonstone, Amethyst online at royalgemstones.com</p>
+        <p>Buy Beautiful semi-precious stones Aquamarine, Garnet, Tourmaline, Chrysoberyl, Spinel, Topaz, Moonstone,
+            Amethyst online at royalgemstones.com</p>
 
         <div class="gemstone-container">
             <div class="gemstone-item">
                 <img src="Images/Garnet.png" alt="Blue Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Garnet</h3></a>
+                <a href="#">
+                    <h3>Garnet</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/Tourmaline.jpg" alt="Ruby">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Tourmaline</h3></a>
+                <a href="#">
+                    <h3>Tourmaline</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/Chrysoberyl.jpg" alt="Blue Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Chrysoberyl</h3></a>
+                <a href="#">
+                    <h3>Chrysoberyl</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/Aquamarine.jpg" alt="Yellow Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Aqamarine</h3></a>
+                <a href="#">
+                    <h3>Aqamarine</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/Topaz.jpg" alt="Pink Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Topaz</h3></a>
+                <a href="#">
+                    <h3>Topaz</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/SPINEL.jpg" alt="White Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Spinel</h3></a>
+                <a href="#">
+                    <h3>Spinel</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/AMETHYST.jpg" alt="PADPARADSCHA">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Amethyst</h3></a>
+                <a href="#">
+                    <h3>Amethyst</h3>
+                </a>
             </div>
 
             <div class="gemstone-item">
                 <img src="Images/MOONSTONE.jpg" alt="Blue Sapphire">
                 <h5><a href="#">Semi Precious Gemstones</a></h5>
-                <a href="#"><h3>Moonstone</h3></a>
+                <a href="#">
+                    <h3>Moonstone</h3>
+                </a>
             </div>
 
-            
+
         </div>
+    </section>
+
+    <!-- Home 6th Section -->
+    <!-- <section class="section5">
+        <div class="contacts-container">
+            <div class="contact c1">
+                <a href="#"><img src="/Images/assets-1.png"></i></a>
+                <a href="#">
+                    <h2>+94 77 261 5929</h2>
+                </a>
+                <h3><b>Sri Lanka - Workshop</b></h3>
+                <h3>WhatsApp / Direct Call</h3>
+            </div>
+            <div class="contact c2">
+                <a href="#"><img src="/Images/assets-1.png"></a>
+                <a href="#">
+                    <h2>+94 11 452 8572</h2>
+                </a>
+                <h3><b>United Kingdom - Workshop</b></h3>
+                <h3>WhatsApp / Direct Call</h3>
+            </div>
+            <div class="contact c3">
+                <a href="#"><img src="/Images/assets-2.png"></a>
+                <a href="#">
+                    <h2>order@royalgemparadice.com</h2>
+                </a>
+            </div>
+            <div class="contact c4">
+                <a href="#"><img src="/Images/assets-3.png"></a>
+                <h2>Showroom and Workshop</h2>
+                <h3><b>No: 25/23, Welipitimodara, Gintota, Galle.</b></h3>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="section6">
+        <table>
+            <tr>
+                <td class="td1">
+                    <div class="contact b1">
+                        <a href="#"><img src="/Images/assets-1.png"></i></a>
+                        <a href="#"><h2>+94 77 261 5929</h2></a>
+                        <h3><b>Sri Lanka - Workshop</b></h3>
+                        <h3>WhatsApp / Direct Call</h3>
+                    </div>
+                </td>
+                <td class="td2">
+                    <div class="contact b2">
+                        <a href="#"><img src="/Images/assets-1.png"></a>
+                        <a href="#"><h2>+94 11 452 8572</h2></a>
+                        <h3><b>United Kingdom - Workshop</b></h3>
+                        <h3>WhatsApp / Direct Call</h3>
+                    </div>
+                </td>
+                <td class="td3">
+                    <div class="contact b3">
+                        <a href="#"><img src="/Images/assets-2.png"></a>
+                        <a href="#"></a><h2>order@royalgemparadice.com</h2></a>
+                        <h3><b>United Kingdom - Workshop</b></h3>
+                        <h3>WhatsApp / Direct Call</h3>
+                    </div>
+                </td>
+                <td class="td4">
+                    <div class="contact b4">
+                        <a href="#"><img src="/Images/assets-3.png"></a>
+                        <h2>Showroom and Workshop</h2>
+                        <h3><b>No: 25/23, Welipitimodara, Gintota, Galle.</b></h3>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </section>
 
     <!--===Footer Section Start===-->
     <footer class="footer">
         <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h2>Our Specialties</h2>
-                    <ul>
-                        <li><a href="#"> We sell Fresh stones only (unused).</a></li>
-                        <hr>
-                        <li><a href="#"> We send goods with 100% insurance.</a></li>
-                        <hr>
-                        <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
-                        <hr>
-                        <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
-                        <hr>
-                        <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
-                                goods at your home.</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Blue Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Ruby</a></li>
-                        <hr>
-                        <li><a href="#">Yellow Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Pink Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">White Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Padparadscha</a></li>
-                        <hr>
-                        <li><a href="#">Star Sapphire</a></li>
-                        <hr>
-                        <li><a href="#">Purple Sapphire</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h2>Semi Precious Gemstones</h2>
-                    <ul>
-                        <li><a href="#">Garnet</a></li>
-                        <hr>
-                        <li><a href="#">Tourmaline</a></li>
-                        <hr>
-                        <li><a href="#">Chrysoberyl</a></li>
-                        <hr>
-                        <li><a href="#">Aqamarine</a></li>
-                        <hr>
-                        <li><a href="#">Topaz</a></li>
-                        <hr>
-                        <li><a href="#">Spinel</a></li>
-                        <hr>
-                        <li><a href="#">Amethyst</a></li>
-                        <hr>
-                        <li><a href="#">Moonstone</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <div class="gia-img">
-                        <img src="/Images/cc1.png" alt="">
-                        <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
-                            www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
-                    </div>
+            <div class="footer-col">
+                <h2>Our Specialties</h2>
+                <ul>
+                    <li><a href="#"> We sell Fresh stones only (unused).</a></li>
+                    <hr>
+                    <li><a href="#"> We send goods with 100% insurance.</a></li>
+                    <hr>
+                    <li><a href="#"> All Gemstones are Worldwide shipped by Free of Charges.</a></li>
+                    <hr>
+                    <li><a href="#"> We courier your purchased item(s) at your address within 24 hours.</a></li>
+                    <hr>
+                    <li><a href="#"> Our sales department keeps in touch with you after your purchase until reaching
+                            goods at your home.</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Blue Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Ruby</a></li>
+                    <hr>
+                    <li><a href="#">Yellow Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Pink Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">White Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Padparadscha</a></li>
+                    <hr>
+                    <li><a href="#">Star Sapphire</a></li>
+                    <hr>
+                    <li><a href="#">Purple Sapphire</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h2>Semi Precious Gemstones</h2>
+                <ul>
+                    <li><a href="#">Garnet</a></li>
+                    <hr>
+                    <li><a href="#">Tourmaline</a></li>
+                    <hr>
+                    <li><a href="#">Chrysoberyl</a></li>
+                    <hr>
+                    <li><a href="#">Aqamarine</a></li>
+                    <hr>
+                    <li><a href="#">Topaz</a></li>
+                    <hr>
+                    <li><a href="#">Spinel</a></li>
+                    <hr>
+                    <li><a href="#">Amethyst</a></li>
+                    <hr>
+                    <li><a href="#">Moonstone</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <div class="gia-img">
+                    <img src="/Images/cc1.png" alt="">
+                    <p>We Provide NGJA Authorized Certificate with All Our Gemstones.
+                        www.gemsinsrilanka.com Manage by ROYAL GEMSTONE PARADICE (PVT) LTD – Since 2024.</p>
                 </div>
             </div>
         </div>
     </footer>
     <!--===Footer Section End===-->
     <div class="copyright-text">
-        <p>Copyright 2024 &copy; ROYAL GEMSTONE PARADICE (PVT) LTD</p>
+        <p>Copyright 2024 &copy; <span>ROYAL GEMSTONE PARADICE (PVT) LTD</span></p>
     </div>
 
     <script src="script.js"></script>
