--- a/information.html
+++ b/information.html
@@ -9,6 +9,7 @@
 
     <!-- ==== CSS File Links ====-->
     <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css\subpages.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -52,11 +54,78 @@
     </header>
     <!--===Header Section Close===-->
 
-
-
-
-
-    
+    <div class="info-container">
+        <div class="information sec1">
+            <div class="inf-img">
+                <img src="Images/info-img1.png">
+            </div>
+            <div class="inf-list">
+                <h2>INTERNATIONAL DELIVERY</h2>
+                <ul>
+                    <li>All the gemstones are shipped from Sri Lanka by EMS Postal Express Service.</li>
+                    <li>All Gemstones are Worldwide shipped by <b>FREE OF CHARGE</b> from Sri Lanka.</li>
+                    <li>We ship all the items within 24 hours of the full payment.</li>
+                    <li>A tracking number will be given you to track the shipment.</li>
+                    <li>The shipment will be delivered within 14 – 20 days.</li>
+                    <li>If you need your Gemstone quickly within 2 - 7 days, we can send it through FedEx, but it will
+                        cost extra $ 100.</li>
+                </ul>
+                <h3>Payment Method</h3>
+                <ul>
+                    <li>Bank Deposit (usually the cheapest and Secure)</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="information sec2">
+            <div class="inf-list">
+                <h2>LOCAL DELIVERY</h2>
+                <ul>
+                    <li>You can collect your Gemstone at our showroom & workshop at Galle. In there, you can visit (FREE OF CHARGE) our workshop and can see how to cut & polish gemstones as well as making jewelries.</li>
+                    <li>You can collect your Gemstone at our Meeting Point at Colombo.</b> from Sri Lanka.</li>
+                    <li>If you stay at a hotel in and around Colombo, Galle, Bentota, Hikkaduwa, we can deliver your Gemstone to your Hotel for FREE OF CHARGE</li>
+                    <li>We deliver your Gemstone to your doorstep (anywhere in Sri Lanka) for FREE OF CHARGE.</li>
+                </ul>
+                <h3>Payment Method</h3>
+                <ul>
+                    <li>Credit/ Debit card payments ( We accept VISA, MASTER, UNION PAY, AMEX, UNIPAY and almost all major credit cards).</li>
+                    <li>Bank Deposit or Bank Transfer</li>
+                </ul>
+            </div>
+            <div class="inf-img">
+                <img src="Images/shipment.png">
+            </div>
+        </div>
+        <hr>
+        <div class="information sec3">
+            <div class="inf-img">
+                <img src="Images/return.png">
+            </div>
+            <div class="inf-list">
+                <h2>RETURNS & REFUNDS</h2>
+                <ul>
+                    <li>If you wish to return item that bought from us, we pleasure to exchange the product with fully resalable condition. The item should be return within 10 days and product in original, undamaged, and packing alone with the invoice. The product hasn’t returned with resalable condition we refuse to exchange. And also if you prefer to exchange product with another you can contact us or email us as soon as possible. For the exchange, product must be in original, undamaged, and packing alone with the invoice.</li>
+                    <li>Also if you wish to exchange or cancel your order, contact us on our hotline.</b> from Sri Lanka.</li>
+                    <li>Delivery charge for return and exchange will be informed by an email or directly to your phone.</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="information sec4">
+            <div class="inf-list">
+                <h2>AUTHORIZED CERTIFICATES</h2>
+                <ul>
+                    <li>We Provide GIA Authorized Laboratory Certificate with All Our Gemstones.</li>
+                    <li>The certificate is documented with the data obtained to the best of means using the techniques and equipment available at the time.</li>    
+                    <li>Certificate, cards and books sending up to customer request.</li>
+                    <li>All the certificate, cards and books are certified by a standard laboratory.</li>
+                </ul>
+            </div>
+            <div class="inf-img">
+                <img src="Images/achievement.png">
+            </div>
+        </div>
+    </div>
 
     <!--===Footer Section Start===-->
     <footer class="footer">
@@ -130,4 +199,5 @@
         <p>Copyright 2024 &copy; ROYAL GEMSTONE PARADICE (PVT) LTD</p>
     </div>
 </body>
+
 </html>
